--- a/styles.css
+++ b/styles.css
@@ -17,9 +17,86 @@
     justify-content: center;
     align-items: center;
     transform-style: preserve-3d;
+    z-index: -2;
+
 }
-.background.forground{
-    position: absolute;
+.background{
+    transform: translateZ(-40px)scale(5);
+}
+.foreground{
+    transform: translateZ(-20px)scale(3);
+}
+
+
+.background,.forground{
+    position: absolute; /*if we want to overlap two images*/
     height: 100%;
     width: 100%;
+    object-fit: cover;
+    z-index: -2;
+}
+h1{
+    position: absolute;
+    top: 5rem;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 10rem;
+    letter-spacing:4px;
+            
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.3),
+                 0 5px 15px rgba(0, 0, 0, 0.5);
+                 -webkit-text-stroke: 2px black; /* Optional: add a stroke to make the text stand out */
+    font-family: 'arial', sans-serif;
+}
+section{
+    background-color: rgb(45,45,45);
+    color: white;
+    padding: 5rem 0;
+}
+.secHeading{
+    font-size: 5rem;
+    padding: 0 10rem;
+    font-family: 'Roboto', sans-serif;
+}
+
+.text{
+    font-size:1.5rem;
+    padding: 0 10rem;
+    font-family: 'Roboto', sans-serif;
+}
+.bg{
+    position: relative;
+    width: 100%;
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: center;
+    height: 500px;
+    
+}
+.desc{
+   position: absolute;
+   background-color: white;
+   background-size: cover;
+    background-position: center;
+   padding: 0.5rem 2.5rem;
+   top: 50%;
+   left: 50%; 
+   transform: translate(-50%,50%);
+   color:black;
+   font-size:3.5rem;
+   font-weight: 600;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   font-family: 'Roboto', sans-serif;
+}
+
+.bg1{
+    background-image: url(sport-1.jpg);
+}
+.bg2{
+    background-image: url(sport-2.jpg);
+}
+.bg3{
+    background-image: url(sport-3.jpg);
 }
